<resources>
    <string name="app_name">C207_Muldong</string>
    <string name="SignIn">Sign In</string>
    <string name="uname_hint">Username</string>
    <string name="pass_hint">Password</string>
    <string name="forgot_pass">Forgot Password?</string>
    <string name="signin_btn">Sign In</string>
    <string name="or_signin">or Sign In with</string>
    <string name="SignUp">Sign Up</string>
    <string name="fullname">Full Name</string>
    <string name="go_register">Not a member yet? Register</string>
    <string name="email">E-mail</string>
    <string name="retype_pass">Retype Password</string>
    <string name="signup_btn">Sign Up</string>
    <string name="or_signup">or Sign Up with</string>
    <string name="go_login">Already a member? Sign In</string>
</resources>